--- a/style.css
+++ b/style.css
@@ -29,20 +29,23 @@ body {
 }
 #buttonsGroup {
     display: flex;
-    flex-grow: 3;
+    flex: 3;
 }
  #first3columns {
     width: 75%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
+    /*justify-content: space-around;
+    align-items: center;*/
  }
  #lastcolumn {
     width: 25%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+ }
+ .firstcolumnbuttons {
+    display: flex;
+    flex: 1;
  }
 .lastcolumnbuttons {
     display: flex;
@@ -53,10 +56,9 @@ body {
     flex: 2;
  }
  .buttons {
-    border: 2px solid rgb(6, 0, 128);
+    border: 1px solid rgb(6, 0, 128);
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 10%;
-    min-width: 25%;
+    min-width: 30%;
  }
