--- a/style.css
+++ b/style.css
@@ -1,26 +1,32 @@
-body {
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
     height: 100vh;
 }
 #main {
-    border: 2px solid red;
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 #calculator {
     display: flex;
     flex-direction: column;
-    min-width: 25%;
+    min-width: 40vw;
+    max-width: 75vw;
     height: 75vh;
     border: 2px solid black;
     border-radius: 1rem;
     background-color: navy;
+    box-shadow: -0.7rem 0.7rem 0.5rem;
 }
-#display {
+#displayWrap {
     display: flex;
     color: white;
     border-bottom: 0.2rem solid;
@@ -29,8 +35,18 @@ body {
     justify-content: end;
     align-items: center;
     height: 20%;
+}
+#display {
+    display: flex;
+    color: white;
+    border-radius: inherit;
+    justify-content: end;
+    align-items: center;
+    height: 100%;
     font-size: 4em;
     padding-right: 0.25em;
+    padding-left: 0.25em;
+    border: 2px solid greenyellow;
 }
 #buttonsGroup {
     display: flex;
@@ -70,3 +86,14 @@ body {
     background-color: rgb(99, 98, 98);
     border-radius: 1rem;
  }
+ #signature_centered {
+    display: flex;
+    align-items: center;
+   }
+#name {
+    font-size: 1.3em;
+}
+.fa-github {
+    font-size: 3em;
+    margin-right: 0.2em;
+    color: black;
