--- a/style.css
+++ b/style.css
@@ -24,7 +24,18 @@ body {
     border: 2px solid black;
     border-radius: 1rem;
     background-color: navy;
-    box-shadow: -0.7rem 0.7rem 0.5rem;
+    box-shadow: -0.2rem 0rem green,
+     -0.4rem 0.1rem green,
+     -0.5rem 0.2rem green,
+     -0.6rem 0.3rem green,
+     -0.7rem 0.4rem green,
+     0rem 0.2rem green,
+     -0.1rem 0.4rem green,
+     -0.2rem 0.5rem green,
+     -0.3rem 0.6rem green,
+     -0.4rem 0.7rem green,
+     -0.7rem 0.7rem green,
+     -1.5rem 1.2rem 2rem black;
 }
 #displayWrap {
     display: flex;
@@ -46,7 +57,6 @@ body {
     font-size: 4em;
     padding-right: 0.25em;
     padding-left: 0.25em;
-    border: 2px solid greenyellow;
 }
 #buttonsGroup {
     display: flex;
